# proxy

./: .env.example  README.md  main.py  postman_collection.json  pyproject.toml
proxy/: utils.py
proxy/routers/: azure.py  bedrock.py
